# permutation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  permutation.h  vcpkg.json
test/: CMakeLists.txt  permutation_test.cpp
